infrastructure/base/minio-tenant/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio-tenant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.${domain}`)
      kind: Rule
      services:
        - name: minio-console
          port: 9090
          scheme: https
          serversTransport: minio-console
  tls:
    secretName: minio-console-tls
